--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,27 +22,24 @@ services:
   #   depends_on:
   #     - db
   db:
-    image: mariadb
-    container_name: mariadb_container
-    # restart: always
-    ports:
-      - "3306:3306"
-    volumes:
-      - mariadb-data:/var/lib/mysql
-      # - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    build:
+      context: database
+      dockerfile: Dockerfile
+    container_name: db_container
     environment:
-      MARIADB_DATABASE: vta_database
-      MARIADB_ROOT_PASSWORD: myrootpassword
-      MARIADB_USER: myuser
-      MARIADB_PASSWORD: mypassword
-      MYSQL_RANDOM_ROOT_PASSWORD: "false"
+      POSTGRES_DB: mobylab-app
+      POSTGRES_USER: mobylab-app
+      POSTGRES_PASSWORD: mobylab-app
+    ports:
+      - "5432:5432"
     networks:
       - app_network
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
 networks:
   app_network:
     driver: bridge
 
 volumes:
-  mariadb-data:
-    driver: local
+  postgres_data:
