--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.initialization-fail-timeout=3000
 spring.datasource.hikari.connection-timeout=10000
+
+springdoc.swagger-ui.path=/swagger-ui.html
