--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,4 +14,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.initialization-fail-timeout=3000
 spring.datasource.hikari.connection-timeout=10000
 
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.path=/swagger-ui
+
+# logging configuration
+logging.level.org.springframework=INFO
+logging.level.org.springframework.security=DEBUG
+
+# spring security configuration
+jwt.secret=secret
+jwt.expiration=86400000
