--- a/.github/workflows/build_and_push_frontend.yml
+++ b/.github/workflows/build_and_push_frontend.yml
@@ -13,7 +13,7 @@ env:
   AWS_REGION: eu-central-1
   DOCKER_BUILDKIT: 1
   DOCKER_CLI_EXPERIMENTAL: enabled
-  LOAD_BALANCER_NAME: vta-load-balancer
+  LOAD_BALANCER_NAME: pweb-load-balancer
 
 jobs:
   build-and-push:
