add claims update posts page fix post add

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,14 +11,21 @@ spring.datasource.username=mobylab-app
 spring.datasource.password=mobylab-app
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.initialization-fail-timeout=3000
 spring.datasource.hikari.connection-timeout=10000
+
+# disable postgresql cache
+#spring.jpa.properties.hibernate.cache.use_second_level_cache=false
+#spring.jpa.properties.hibernate.cache.use_query_cache=false
 
 springdoc.swagger-ui.path=/swagger-ui
 
 # logging configuration
 logging.level.org.springframework=INFO
 logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate=ERROR
 
 # spring security configuration
 jwt.secret=secret
