--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,7 @@ services:
       context: database
       dockerfile: Dockerfile
     container_name: db_container
+    command: ["postgres", "-c", "log_statement=all", "-c", "log_destination=stderr"]
     environment:
       POSTGRES_DB: mobylab-app
       POSTGRES_USER: mobylab-app
