--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,32 @@
-# Use the official Nginx image as the base image
-FROM nginx:1.21.1-alpine
+# Stage 1: Build the React application
+FROM node:18 as build
 
-# Remove the default Nginx configuration file
-RUN rm /etc/nginx/conf.d/default.conf
+# Set the working directory in the container
+WORKDIR /app
 
-# Copy your Nginx configuration file to the container
-COPY nginx.conf /etc/nginx/conf.d/
+# Copy the package.json and package-lock.json (or yarn.lock)
+COPY package*.json ./
 
-# Copy the build directory to the container
-COPY build /usr/share/nginx/html
+# Install dependencies
+RUN npm install
 
-# Expose port 80
+# Copy the rest of your app's source code
+COPY . ./
+
+# Build your app
+RUN npm run build
+
+# Stage 2: Serve the app using Nginx
+FROM nginx:stable-alpine
+
+# Copy the build output to replace the default nginx contents.
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Copy the nginx configuration file
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Expose port 80 to the Docker host, so we can access it from the outside.
 EXPOSE 80
 
-# Start Nginx server
+# Start Nginx and keep it running in the foreground
 CMD ["nginx", "-g", "daemon off;"]
