--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,8 @@ server.port=8090
 
 # spring boot devtools
 spring.devtools.add-properties=false
-spring.devtools.remote.debug.local-port=5005
 
-# spring database configuration for PostgreSQL
+# spring database configuration for PostgresSql
 spring.datasource.url=jdbc:postgresql://localhost:5432/mobylab-app
 spring.datasource.username=mobylab-app
 spring.datasource.password=mobylab-app
