Add JWT authentication enhancements and configuration updates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,5 +23,8 @@ logging.level.org.springframework.security=DEBUG
 logging.level.org.hibernate=ERROR
 
 # spring security configuration
-jwt.secret=secret
-jwt.expiration=86400000
+# jwt.secret=secret
+# jwt.expiration=86400000
+
+# Authentication server configuration
+authentication.server.url=http://localhost:5000
