--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
     container_name: frontend_container
     ports:
       - "3000:3000"
+    networks:
+      - app_network
   backend:
     build:
       context: backend
@@ -19,13 +21,33 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/mobylab-app
       - SPRING_DATASOURCE_USERNAME=mobylab-app
       - SPRING_DATASOURCE_PASSWORD=mobylab-app
-
+      - AUTHENTICATION_SERVER_URL=http://authentication:5000
     ports:
       - "8090:8090"
     networks:
       - app_network
     depends_on:
       - db
+  authentication:
+    build:
+      context: authentication
+      dockerfile: Dockerfile
+    container_name: authentication_container
+    environment:
+      - FLASK_APP=app.py
+      - FLASK_RUN_HOST=0.0.0.0
+      - SQLALCHEMY_DATABASE_URI=postgresql://mobylab-app:mobylab-app@db:5432/mobylab-app
+      - SECRET_KEY=your_secret_key
+      - POSTGRES_USER=mobylab-app
+      - POSTGRES_PASSWORD=mobylab-app
+      - FLASK_RUN_PORT=5000
+    ports:
+      - "5000:5000"
+    depends_on:
+      - db
+    networks:
+      - app_network
+    restart: always
   db:
     build:
       context: database
@@ -50,6 +72,8 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_CONFIG_SERVER_MODE: "False"
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
       PGADMIN_LISTEN_PORT: 80
     ports:
       - "5050:80"
@@ -57,9 +81,26 @@ services:
       - db
     networks:
       - app_network
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
-      - ./pgadmin/servers.json:/pgadmin4/servers.json
+    configs:
+      - source: pgpass
+        target: /pgpass
+      - source: servers.json
+        target: /pgadmin4/servers.json  
+configs:
+  pgpass:
+    content: db:5432:*:mobylab-app:mobylab-app
+  servers.json:
+    content: |
+      {"Servers": {"1": {
+        "Group": "Servers",
+        "Name": "My Local Postgres 16.1",
+        "Host": "db",
+        "Port": 5432,
+        "MaintenanceDB": "mobylab-app",
+        "Username": "mobylab-app",
+        "PassFile": "/pgpass",
+        "SSLMode": "prefer"
+      }}}
 
 networks:
   app_network:
