--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,8 +74,8 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_CONFIG_SERVER_MODE: "False"
-      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
+      # PGADMIN_CONFIG_SERVER_MODE: "False"
+      # PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: "False"
       PGADMIN_LISTEN_PORT: 80
     ports:
       - "5050:80"
