--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -330,6 +330,46 @@ spec:
       targetPort: 80
   type: NodePort
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: portainer-deployment
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: portainer
+  template:
+    metadata:
+      labels:
+        app: portainer
+    spec:
+      containers:
+      - name: portainer
+        image: portainer-image:latest
+        ports:
+        - containerPort: 9000
+        resources:
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: portainer-service
+spec:
+  selector:
+    app: portainer
+  ports:
+  - protocol: TCP
+    port: 9000
+    targetPort: 9000
+  type: NodePort
+---
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
