Add readiness probe and init container for PostgreSQL in Kubernetes deployment

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -91,6 +91,11 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: postgres-data
+        readinessProbe:
+          tcpSocket:
+            port: 5432
+          initialDelaySeconds: 10
+          periodSeconds: 5
       volumes:
       - name: postgres-data
         persistentVolumeClaim:
@@ -230,6 +235,10 @@ spec:
       labels:
         app: authentication
     spec:
+      initContainers:
+      - name: wait-for-postgres
+        image: busybox
+        command: ['sh', '-c', 'until nc -z db-service 5432; do echo waiting for postgres; sleep 2; done;']
       containers:
       - name: authentication
         image: authentication-image:latest
