--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -339,6 +339,33 @@ spec:
       targetPort: 80
   type: NodePort
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: portainer-sa
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: portainer-clusterrole
+rules:
+- apiGroups: ["", "apps", "extensions", "batch", "autoscaling", "networking.k8s.io", "storage.k8s.io", "rbac.authorization.k8s.io"]
+  resources: ["*"]
+  verbs: ["get", "list", "watch"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: portainer-clusterrolebinding
+subjects:
+- kind: ServiceAccount
+  name: portainer-sa
+  namespace: default
+roleRef:
+  kind: ClusterRole
+  name: portainer-clusterrole
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -353,6 +380,7 @@ spec:
       labels:
         app: portainer
     spec:
+      serviceAccountName: portainer-sa
       containers:
       - name: portainer
         image: portainer-image:latest
