Add init container to wait for PostgreSQL readiness in pgAdmin deployment

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -306,6 +306,10 @@ spec:
       labels:
         app: pgadmin
     spec:
+      initContainers:
+      - name: wait-for-postgres
+        image: busybox
+        command: ['sh', '-c', 'until nc -z db-service 5432; do echo waiting for postgres; sleep 2; done;']
       containers:
       - name: pgadmin
         image: dpage/pgadmin4:latest
