--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,10 @@ logging.level.org.hibernate=ERROR
 
 # Authentication server configuration
 authentication.server.url=http://localhost:5000
+
+# Enable all Actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.endpoints.web.base-path=/
+management.endpoints.web.path-mapping.prometheus=metrics
