Update PostgreSQL image reference and add build configuration for custom image

--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -62,7 +62,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:latest
+        image: postgres-image:latest
         env:
         - name: POSTGRES_DB
           valueFrom:
