--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -44,7 +44,7 @@ kind: ConfigMap
 metadata:
   name: frontend-config
 data:
-  REACT_APP_LOAD_BALANCER_DNS: "localhost"
+  REACT_APP_BACKEND_URL: "localhost"
 ---
 apiVersion: apps/v1
 kind: Deployment
